--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,7 @@
 canvas {
     display: block;
-    margin: 2rem auto;
+    /* margin: 2rem auto; */
+    margin-right: 2vh;
 }
 
 canvas:hover {
@@ -37,4 +38,9 @@ div.container {
 .go-button:active {
     position: relative;
     top: 1px;
+}
+
+.screen {
+    display: flex;
+    flex-direction: row;
 }
